fix(clock): fixed invisible clock on light-themed boards (#1329)

--- a/next-tavla/src/Shared/components/Clock/styles.module.css
+++ b/next-tavla/src/Shared/components/Clock/styles.module.css
@@ -1,3 +1,4 @@
 .clock {
     font-size: 1.5625em;
+    color: var(--main-text-color);
 }
